# dustpy

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  SECURITY.md  environment.yml  meson.build  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: 10_example_ice_lines.html  10_example_ice_lines.ipynb  11_example_planetesimal_formation.html  1_basics.html  1_basics.ipynb  2_simple_customization.html  2_simple_customization.ipynb  3_advanced_customization.html  3_advanced_customization.ipynb  4_standard_model.html  4_standard_model.ipynb  5_dust_coagulation.html  5_dust_coagulation.ipynb  6_dust_evolution.html  6_dust_evolution.ipynb  7_gas_evolution.html  7_gas_evolution.ipynb  8_test_gas_evolution.html  8_test_gas_evolution.ipynb  9_example_gaps.html  A_citation.html  A_citation.ipynb  A_publications.html  A_publications.ipynb  B_publications.html  B_publications.ipynb  C_contrib_bug_feature.html  C_contrib_bug_feature.ipynb  D_discussions.html  D_discussions.ipynb  E_changelog.html  E_changelog.ipynb  api.html  dustpylib.html  example_ice_lines.html  example_ice_lines.ipynb  example_planetary_gaps.html  example_planetary_gaps.ipynb  example_planetesimal_formation.html  example_planetesimal_formation.ipynb  (+11 more)
docs/_modules/: index.html
docs/_sources/: 10_example_ice_lines.ipynb.txt  1_basics.ipynb.txt  2_simple_customization.ipynb.txt  3_advanced_customization.ipynb.txt  4_standard_model.ipynb.txt  5_dust_coagulation.ipynb.txt  6_dust_evolution.ipynb.txt  7_gas_evolution.ipynb.txt  8_test_gas_evolution.ipynb.txt  9_example_gaps.ipynb.txt  A_publications.ipynb.txt  B_publications.ipynb.txt  C_contrib_bug_feature.ipynb.txt  D_discussions.ipynb.txt  E_changelog.ipynb.txt  dustpylib.ipynb.txt  example_ice_lines.ipynb.txt  example_planetary_gaps.ipynb.txt  example_planetesimal_formation.ipynb.txt  index.rst.txt  test_analytical_coagulation_kernels.ipynb.txt  test_gas_evolution.ipynb.txt
docs/api/: dustpy.Simulation.html  dustpy.hdf5writer.html  dustpy.plot.ipanel.html  dustpy.plot.panel.html  dustpy.readdump.html  dustpy.std.dust.D.html  dustpy.std.dust.F_adv.html  dustpy.std.dust.F_diff.html  dustpy.std.dust.F_tot.html  dustpy.std.dust.H.html  dustpy.std.dust.MRN_distribution.html  dustpy.std.dust.S_coag.html  dustpy.std.dust.S_hyd.html  dustpy.std.dust.S_tot.html  dustpy.std.dust.SigmaFloor.html  dustpy.std.dust.Sigma_deriv.html  dustpy.std.dust.St_Epstein_StokesI.html  dustpy.std.dust.a.html  dustpy.std.dust.boundary.html  dustpy.std.dust.coagulation_parameters.html  dustpy.std.dust.dt.html  dustpy.std.dust.dt_adaptive.html  dustpy.std.dust.enforce_floor_value.html  (+64 more)
docs_source/: Makefile  requirements.txt
dustpy/: __init__.py  meson.build  simulation.py
dustpy/constants/: __init__.py  constants.f90  meson.build
dustpy/std/: __init__.py  dust.f90  dust.py  gas.f90  gas.py  grid.py  meson.build  sim.py  star.py
examples/: 11_example_planetesimal_formation.ipynb  1_basics.ipynb  2_simple_customization.ipynb  3_advanced_customization.ipynb  4_standard_model.ipynb  5_dust_coagulation.ipynb  6_dust_evolution.ipynb  7_gas_evolution.ipynb  8_test_gas_evolution.ipynb  A_citation.ipynb  A_publications.ipynb  B_publications.ipynb  C_contrib_bug_feature.ipynb  E_changelog.ipynb  example_ice_lines.ipynb  example_planetary_gaps.ipynb  example_planetesimal_formation.ipynb  test_analytical_coagulation_kernels.ipynb  test_gas_evolution.ipynb
(+139 files in other folders)
